tests/neg/dedented-string-literals.check
-- Error: tests/neg/dedented-string-literals.scala:5:27
5 |  val noNewlineAfterOpen = '''content on same line // error
  |                           ^
  |dedented string literal must start with newline after opening quotes
-- Error: tests/neg/dedented-string-literals.scala:8:20
8 |  val notIndented = '''
  |                    ^
  |line in dedented string literal must be indented at least as much as the closing delimiter
-- Error: tests/neg/dedented-string-literals.scala:13:24
13 |  val mixedTabsSpaces = '''
   |                        ^
   |dedented string literal cannot mix tabs and spaces in indentation
-- [E040] Syntax Error: tests/neg/dedented-string-literals.scala:19:17
19 |  val unclosed = '''
   |                 ^
   |unclosed dedented string literal
-- [E040] Syntax Error: tests/neg/dedented-string-literals.scala:23:35
23 |  val nonWhitespaceBeforeClosing = '''
   |                                   ^
   |unclosed dedented string literal
-- Error: tests/neg/dedented-string-literals.scala:39:4
39 |    onlyAtCompileTime // error
   |    ^^^^^^^^^^^^^^^^^
   |This method should only be used at compile time
   |Do not call at runtime
